MDEV-21659 XA rollback foreign_xid is allowed inside active XA

This is a "quick" fix to help QA work more effiently. The official fixes will be pushed starting from 10.1.